# arris-modem-status

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc  .flake  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FIRMWARE_COMPATIBILITY.md  MANIFEST.in  Makefile  README.md  RELEASE_PROCESS.md  VERSION_MANAGEMENT.md  comprehensive_test.py  concurrent_vs_serial_test.py  error_analysis_test.py  production_test.py  pyproject.toml  pytest.ini  setup.cfg  setup_custom_env.sh  tox.ini
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: dependabot.yaml  quality-check.yml  release.yaml  test-setup.yml  trivy.yml
arris-status/: __init__.py  arris_status_client.py  cli.py
arris_modem_status/: __init__.py  arris_status_client.py  cli.py  client.py  client.py_old  exceptions.py  http_compatibility.py  instrumentation.py  models.py  time_utils.py
arris_modem_status/cli/: __init__.py  __main__.py  args.py  connectivity.py  formatters.py  logging_setup.py  main.py
arris_modem_status/client/: auth.py  error_handler.py  http.py  main.py  parser.py
debug_tools/: README.md  comprehensive_test.py  enhanced_deep_capture.py  hnap_raw_debugger.py
scripts/: README.md  capture_modem_cdp.py  capture_with_proxy.py  cleanup_legacy.py  debug_cdp_capture.py  extract_selenium_stealth.py  extract_selenium_token.py  extract_selenium_undetected.py  extract_undetected_with_cdp.py  extract_with_cdp_logging.py  fix_build_deps.py  inject_capture_xhr.py  inject_capture_xhr_early.py  manage_version.py  migrate_setup_cfg.py  sync_tool_versions.py  validate_setup.py
tests/: __init__.py  conftest.py  test_arris_client_core.py  test_channel_parsing.py  test_cli.py  test_cli_edge_cases.py  test_cli_main_module.py  test_client_error_paths.py  test_connection_handling.py  test_exceptions.py  test_exceptions_coverage.py  test_http_compatibility.py  test_http_compatibility_coverage.py  test_http_compatibility_enhanced.py  test_log_parsing.py  test_models_coverage.py  test_performance_instrumentation.py  test_runner.py  test_utils.py  test_variable_scoping.py
