[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arris-modem-status"
dynamic = ["version"]
description = "High-performance Python client for Arris cable modem status via HNAP with HTTP compatibility"
authors = [
    { name = "Charles Marshall", email = "charles@wozi.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

# MINIMAL CORE DEPENDENCIES - Only what's needed for basic functionality
dependencies = [
    "requests>=2.25.1",
    "urllib3>=1.26.0"
]

# IMPROVED CLASSIFIERS for better PyPI discoverability
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring", 
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]

# FOCUSED KEYWORDS for better search results
keywords = [
    "arris", "modem", "cable", "router", "DOCSIS", "networking", 
    "monitoring", "HNAP", "status", "diagnostics", "internet"
]

[project.urls]
Homepage = "https://github.com/csmarshall/arris-modem-status"
Repository = "https://github.com/csmarshall/arris-modem-status"
Documentation = "https://github.com/csmarshall/arris-modem-status#readme"
"Bug Tracker" = "https://github.com/csmarshall/arris-modem-status/issues"
Changelog = "https://github.com/csmarshall/arris-modem-status/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/csmarshall/arris-modem-status"

[project.scripts]
arris-modem-status = "arris_modem_status.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0", 
    "isort==5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.980",
    "bump-my-version>=0.17.0",
    "autopep8>=2.0.0",
    "bandit>=1.7.5",
    "pre-commit>=3.0.0"
]

# REVERSE ENGINEERING / DEBUG TOOLS (kept in repo, not shipped by default)
debug = [
    "playwright>=1.40.0",
    "selenium>=4.0.0", 
    "beautifulsoup4>=4.9.0",
    "aiohttp>=3.8.0"  # For async debugging
]

# ALL DEVELOPMENT DEPENDENCIES (everything above)
all = [
    "arris-modem-status[dev,debug]"
]

# TESTING ONLY
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.21.0",
    "coverage[toml]>=6.0.0"
]

# BUILD AND RELEASE (for maintainers)
build = [
    "build>=0.10.0",
    "twine>=4.0.0", 
    "wheel>=0.40.0"
]

# DYNAMIC VERSION CONFIGURATION
[tool.setuptools.dynamic]
version = {attr = "arris_modem_status.__version__"}

[tool.setuptools]
zip-safe = false

# PACKAGE DISCOVERY - Exclude development tools from PyPI package
[tool.setuptools.packages.find]
where = ["."]
include = ["arris_modem_status*"]
exclude = [
    "debug_tools*",
    "scripts*", 
    "tests*",
    "concurrent_vs_serial_test*",
    "error_analysis_test*", 
    "production_test*"
]

[tool.setuptools.package-data]
arris_modem_status = ["py.typed"]

# EXCLUDE DEVELOPMENT FILES FROM PACKAGE
[tool.setuptools.exclude-package-data]
"*" = [
    "debug_tools/*",
    "*.sh",
    "*_test.py",
    "test_*"
]

# BLACK CODE FORMATTER
[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
)/
'''

# ISORT IMPORT SORTING
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["arris_modem_status", "tests"]

# MYPY TYPE CHECKING
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "urllib3.*",
    "requests.*",
    "selenium.*", 
    "playwright.*"
]
ignore_missing_imports = true

# PYTEST CONFIGURATION
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config", 
    "--tb=short",
    "--cov=arris_modem_status",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80"
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
    "http_compatibility: marks tests for HTTP compatibility",
    "connection: marks tests for connection handling",
    "performance: marks tests for performance validation",
    "auth: marks tests for authentication functionality",
    "parsing: marks tests for data parsing",
    "cli: marks tests for CLI functionality"
]
timeout = 30
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning",
    "ignore::DeprecationWarning:urllib3.*",
    "ignore::PendingDeprecationWarning"
]

# COVERAGE CONFIGURATION
[tool.coverage.run]
source = ["arris_modem_status"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "arris_modem_status/__main__.py"
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*Protocol.*:",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
title = "arris-modem-status coverage report"

# BANDIT SECURITY LINTING
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
