[metadata]
name = arris-modem-status
version = 0.1.0
author = Charles Marshall
author_email = charles@wozi.com
description = A Python client for querying Arris modem status information.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/csmarshall/arris-modem-status
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.25.1

[options.entry_points]
console_scripts =
    arris-modem-status = arris_modem_status.cli:main

[options.extras_require]
dev =
    selenium>=4.0.0
    selenium-wire>=5.0.0
    beautifulsoup4>=4.9.0
    pytest
    coverage
    flake8
    black
